# detail-forge

./: .gitattributes  .gitignore  BUILD.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json
.github/workflows/: macos.yml
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/dsp/: Limiter.h  clip.dsp
Source/ui/: index.html
Tests/: engine_runner.cpp  limiter_runner.cpp
UI design files/: .thumbnail  Detail Forge.dc.html  Knob.dc.html  Selector.dc.html
UI design files/uploads/: 2026-07-03-ui-design-brief.md
brain/: README.md
brain/00-Index/: 00-Home.md  01-How-To-Use-This-Vault.md  02-Glossary.md  Repo-Docs-Index.md  detail-forge-Operating-Rules.md
brain/10-Architecture/: 10-Architecture-MOC.md  11-Tech-Stack.md  12-Repo-Structure.md  15-DSP-Signal-Chain.md
brain/20-Modules/: 20-Modules-MOC.md  21-Clip-Engine.md  22-Limiter.md  25-WebView-GUI.md
brain/30-Roadmap/: 30-Roadmap-MOC.md  31-Current-Priorities.md  32-Near-Term-Roadmap.md  34-Do-Not-Start-Yet.md
brain/40-Operations/: 40-Operations-MOC.md  41-Build-Runbook.md  47-Git-Workflow.md
brain/50-Audit-Log/: 50-Audit-Log-MOC.md  51-Timeline.md  52-Decision-Log.md  53-Known-Issues.md  54-Session-Log-Template.md  55-Session-2026-07-03.md
brain/60-Reference/: 60-Reference-MOC.md  61-Faust-Libraries.md  62-Testing.md  63-Reference-Repos.md  64-Concepts-ADAA-and-TruePeak.md
brain/99-Templates/: Module-Note-Template.md
brand/: YANTRA-BRAND.md
docs/: 2026-07-02-detail-preserving-dynamics-seed.md  2026-07-02-research-validate-seed.md  2026-07-03-detail-viz.md
packaging/: DetailForge.iss  entitlements.mac.plist  package-windows.ps1
plans/: 2026-07-02-m0-vertical-slice-plan.md  2026-07-04-detail-viz-plan.md  2026-07-06-m2-true-peak-limiter-plan.md
scripts/: analyze.py  m0_gate.py  resume.ps1  validate.ps1  viz_accuracy.mjs
specs/: 2026-07-02-m0-vertical-slice.md  2026-07-04-detail-viz.md  2026-07-06-m2-true-peak-limiter.md
